[gd_scene load_steps=11 format=3 uid="uid://bnnoct48gjtw6"]

[ext_resource type="Script" uid="uid://ddt5ufmvickc2" path="res://scenes/Main.gd" id="1_d7g3n"]
[ext_resource type="PackedScene" uid="uid://5javxi3uy0ep" path="res://scenes/Museum.tscn" id="1_ivvmh"]
[ext_resource type="Material" uid="uid://dy8pkb3g1hrd4" path="res://assets/textures/post_process_crt.tres" id="3_vde54"]
[ext_resource type="PackedScene" uid="uid://bw3fu2y38n3yk" path="res://scenes/menu/Settings.tscn" id="4_31ns1"]
[ext_resource type="PackedScene" uid="uid://3q5n8txx3jmm" path="res://scenes/menu/MainMenu.tscn" id="4_elltp"]
[ext_resource type="PackedScene" uid="uid://bhi1d8bl668hb" path="res://scenes/menu/PauseMenu.tscn" id="5_boks6"]
[ext_resource type="PackedScene" uid="uid://b575vo2u5rw0p" path="res://scenes/menu/PopupTerminalMenu.tscn" id="6_cjdwp"]
[ext_resource type="PackedScene" uid="uid://btdrwyul4s0cv" path="res://scenes/CacheCleaner.tscn" id="7_lsl8e"]
[ext_resource type="AudioStream" uid="uid://b1h0hsbf5yxji" path="res://assets/sound/UI/UI Game Launch Sting/Game Launch Sting.ogg" id="9_ketwq"]
[ext_resource type="PackedScene" path="res://ui/CLICompletionOverlay.tscn" id="10_cliov"]

[node name="Main" type="Node"]
script = ExtResource("1_d7g3n")

[node name="Museum" parent="." instance=ExtResource("1_ivvmh")]

[node name="CRTPostProcessing" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CRTPostProcessing"]
material = ExtResource("3_vde54")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = -6
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Settings" parent="CanvasLayer" instance=ExtResource("4_31ns1")]
visible = false

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource("4_elltp")]
unique_name_in_owner = true

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("5_boks6")]
visible = false

[node name="PopupTerminalMenu" parent="CanvasLayer" instance=ExtResource("6_cjdwp")]
visible = false

[node name="FpsLabel" type="Label" parent="."]
visible = false
z_index = 1
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(1, 1.0203)
theme_override_colors/font_color = Color(1, 1, 1, 0.501961)

[node name="CacheCleaner" parent="." instance=ExtResource("7_lsl8e")]

[node name="GameLaunchSting" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ketwq")
bus = &"Music"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 11.5449, 0)
visible = false
light_energy = 0.35
sky_mode = 1

[node name="CLICompletionOverlay" parent="." instance=ExtResource("10_cliov")]

[connection signal="resume" from="CanvasLayer/Settings" to="." method="_on_settings_back"]
[connection signal="settings" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_settings"]
[connection signal="start" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_start_pressed"]
[connection signal="start_webxr" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_start_webxr"]
[connection signal="resume" from="CanvasLayer/PauseMenu" to="." method="_on_main_menu_start_pressed"]
[connection signal="return_to_lobby" from="CanvasLayer/PauseMenu" to="." method="_on_pause_menu_return_to_lobby"]
[connection signal="settings" from="CanvasLayer/PauseMenu" to="." method="_on_pause_menu_settings"]
[connection signal="resume" from="CanvasLayer/PopupTerminalMenu" to="." method="_on_main_menu_start_pressed"]
